# GEMSedit

./: .gitignore  MANIFEST.in  Makefile  ReadMe.md  pyproject.toml  requirements.txt  setup.py
docs/: GEMS_API_Reference.md
gemsedit/: __init__.py  main.py  version_info.py
gemsedit/database/: connection.py  gems_db.py  globalact.py  param_select.py  sqltools.py  yamlsqlexchange.py
gemsedit/gui/: 0_convert_qrc_to_py.sh  0_convert_ui_to_py.sh  0_process_ui_files.py  ACTIONLIST.py  CustomClickableLabel.py  action_list.py  custom_clickable_label.py  custom_messagebox.py  gems_window.py  gems_window.ui  gemsedit.qrc  gemsedit_rc.py  genericcoldelegates.py  genericrowdelegates.py  globalact_window.py  globalact_window.ui  helptext.py  mycolors.py  mycursors.py  mykeys.py  object_select_widget.py  objects_window.py  objects_window.ui  param_select_dlg.py  param_select_dlg.ui  richtextlineedit.py  run_launch_dlg.py  run_launch_dlg.ui  run_launch_dlg.ui.py  settings_dlg.py  settings_dlg.ui  util_process_ui_files.py
gemsedit/gui/media/: Antialiasfactory-Jewelry-Agate.icns  __init__.py  iconfinder.webloc
gemsedit/pyvis/: network.py  options.py  requirements.txt
gemsedit/pyvis/source/: conf.py  index.rst
gemsedit/resources/: DefaultEnv.yaml  UiDBTables.yaml  changelog.txt
gemsedit/resources/docs/: GEMSOverview.docx  GEMS_API_Reference.md  GEMS_Action_Reference.md  gems_overview.md  gems_overview_orig_keep.md  github.css  install_notes.txt  markdown_to_pdf.sh  tips_on_pdf_convert.md  word_to_markdown.sh
gemsedit/session/: gems_edit.py  networkgraph.py  objects.py  runlaunch.py  settings.py  version.py
gemsedit/utils/: apputils.py  get_version.py  localmunch.py
